[package]
name = "denuocc"
version = "0.1.0"
authors = ["Jason Priest <jason@jpriest.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1.2"
backtrace = "0.3"
lazy_static = "1.3"
toml = "0.5"
log = "0.4"
env_logger = "0.6"

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"

[[test]]
name = "tomltest"
path = "tests/tomltest.rs"
harness = false
test = true