[package]
name = "grammar_tool"
version = "0.1.0"
authors = ["Jason Priest <jason@jpriest.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool for understanding LL(k) grammars"
categories = ["parsing", "command-line-utilities"]
keywords = ["LL", "recursive", "descent", "parsing", "yacc"]
repository = "https://github.com/JustAPerson/denuocc/tree/master/tools/grammar_tool"

readme = "./README.md"
build = "./build.rs"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1"
clap = "2.33"

[build-dependencies]
lalrpop = "0.17.2"